:construction: tries to fix overflow

--- a/src/Components/Portfolio/SundayMorning/ShowCodePanel/ShowCodePanel.module.css
+++ b/src/Components/Portfolio/SundayMorning/ShowCodePanel/ShowCodePanel.module.css
@@ -10,7 +10,8 @@
     color: #143217;
     padding:5px;
     background-color: #deffec;
-    word-wrap:none;
+    /* word-wrap:none; */
+    overflow-x: scroll;
 }
 
 .paddingor {
